Fix and adjust blog post card margins and grid gap

--- a/src/components/blogpostcard.module.scss
+++ b/src/components/blogpostcard.module.scss
@@ -6,7 +6,7 @@
 }
 
 .textBlock {
-  padding: 10px;
+  padding: 20px;
 }
 
 .textBlock h2 {
@@ -28,7 +28,7 @@
 }
 
 .chip {
-  padding-top: 10px;
+  margin: 4px 4px 0px 0px;
 }
 
 .textBlock a {
